# jtag-switch

./: .gitignore  README.md
.github/workflows/: kicad-ci.yaml  renode-tests.yaml  west-build-ci.yaml
hw/: .dockerfile  .kibot.yaml  LICENSE  jtag_switch.kicad_pcb  jtag_switch.kicad_prl  jtag_switch.kicad_pro  jtag_switch.kicad_sch
sw/: prj.conf  west.yml
sw/boards/: frdm_k64f.overlay
sw/jtag-switch/: CMakeLists.txt  README.md  app.ld  prj.conf
sw/jtag-switch/boards/: frdm_k64f.overlay  frdm_k64f_virtual.conf  frdm_k64f_virtual.overlay  frdm_mcxc444.conf  frdm_mcxc444.overlay  nucleo_f439zi.overlay
sw/jtag-switch/boards/renode/frdm_k64f_virtual/: Kconfig.defconfig  Kconfig.frdm_k64f_virtual  board.cmake  board.yml  frdm_k64f_virtual-pinctrl.dtsi  frdm_k64f_virtual.dts  frdm_k64f_virtual.yaml  frdm_k64f_virtual_defconfig
sw/jtag-switch/boards/renode/frdm_k64f_virtual/support/: frdm_k64f_virtual.repl  frdm_k64f_virtual.resc
sw/jtag-switch/src/gpio/: gpio_control.c  gpio_control.h
sw/jtag-switch/src/net/: http_rest_api.h  http_web_ui.c
sw/jtag-switch/tests/: README.md  requirements.txt  serial_utils.py  test_base.py  test_cli_tool.py  test_client_library.py  test_renode.py  test_rest_api.py  test_serial_shell.py  test_web_ui.py  web_ui_utils.py
sw/jtag-switch/tools/jtag-switch-client/: README.md
sw/jtag-switch/tools/jtag-switch-client/jtag_switch/: __init__.py
sw/jtag-switch/tools/jtag-switch-client/jtag_switch/backends/: __init__.py  base.py  serial_backend.py
sw/jtag-switch/web/: index.html  style.css
sw/src/: main.c
sw/tests/: pytest.ini  (+5 more)
(+16 files in other folders)
